feat(patient): clean button functional

--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -427,7 +427,7 @@
             />
           </div>
         </div>
-        <app-form-buttons />
+        <app-form-buttons (handleEdit)="formPatientRegister = initPatientForm()" />
       </form>
     </div>
   </div>
