--- a/src/app/components/stats/patients-card/patients-card.component.html
+++ b/src/app/components/stats/patients-card/patients-card.component.html
@@ -1,15 +1,17 @@
 <div
-  class="border border-slate-300 text-slate-600 rounded-md aspect-square p-2 shadow-md flex flex-col justify-between"
+  class="flex flex-col justify-between p-2 border rounded-md shadow-md border-slate-300 text-slate-600 aspect-square"
 >
   <div class="flex flex-col">
     <ng-icon name="ionPersonCircle" class="mx-auto text-6xl" />
-    <p class="truncate text-lg font-medium">{{ name }}</p>
-    <div class="flex justify-between text-sm text-slate-400 italic">
-      <p *ngIf="age">{{ age }}</p>
-      <p>{{ phone }}</p>
+    <p class="text-lg font-medium truncate">{{ patient?.fullName }}</p>
+    <div class="flex justify-between text-sm italic text-slate-400">
+      <p>{{ getAge() }}</p>
+      <p>{{ patient?.phone }}</p>
     </div>
-    <p class="text-slate-400 font-medium">{{ healthInsurance }}</p>
+    <p class="font-medium text-slate-400">{{ patient?.healthInsurance }}</p>
   </div>
 
-  <button class="bg-slate-600 text-slate-50 rounded py-1">Ver detalhes</button>
+  <button class="py-1 rounded bg-slate-600 text-slate-50" (click)="onClick()">
+    Ver detalhes
+  </button>
 </div>
