--- a/src/app/components/stats/stats-list/stats-list.component.html
+++ b/src/app/components/stats/stats-list/stats-list.component.html
@@ -1,36 +1,33 @@
 <div *ngIf="listStyle === 'GRID'; then grid; else table"></div>
 <ng-template #grid>
-  <div class="grid grid-cols-5 gap-3">
+  <div *ngIf="isPatients(); else userCards" class="grid grid-cols-5 gap-3">
     <app-patients-card
-      *ngFor="let details of data"
-      [healthInsurance]="details.healthInsurance"
-      [name]="details.fullName"
-      [phone]="details.phone"
-      [age]="
-        details.birthday ? calculateAge(details.birthday) + ' anos' : undefined
-      "
+      *ngFor="let patient of getPatients()"
+      [patient]="patient"
     />
   </div>
+  <ng-template #userCards>
+    <div class="grid grid-cols-5 gap-3">
+      <app-user-card *ngFor="let user of getUsers()" [user]="user" />
+    </div>
+  </ng-template>
 </ng-template>
 <ng-template #table>
-  <div class="border border-slate-300 flex flex-col rounded-md overflow-hidden">
-    <div class="flex items-center text-slate-800 font-medium">
-      <div class="py-2 w-10 aspect-square bg-slate-300"></div>
+  <div class="flex flex-col overflow-hidden border rounded-md border-slate-300">
+    <div class="flex items-center font-medium text-slate-800">
+      <div class="w-10 py-2 aspect-square bg-slate-300"></div>
       <div class="flex-grow pl-3">Nome</div>
-      <div class="pl-3 w-1/12">Idade</div>
-      <div class="pl-3 w-2/12">Contato</div>
-      <div class="pl-3 w-3/12">Plano de Saúde</div>
-      <div class="px-3 w-1/12"></div>
+      <div class="w-1/12 pl-3">Idade</div>
+      <div class="w-2/12 pl-3">Contato</div>
+      <div class="w-3/12 pl-3">Plano de Saúde</div>
+      <div class="w-1/12 px-3"></div>
     </div>
     <app-stats-table-row
-      *ngFor="let details of data; index as i"
+      *ngFor="let details of getPatients(); index as i"
       [id]="i + 1"
-      [healthInsurance]="details.healthInsurance"
+      [healthInsurance]="details.healthInsurance!"
       [name]="details.fullName"
       [phone]="details.phone"
-      [age]="
-        details.birthday ? calculateAge(details.birthday) + ' anos' : undefined
-      "
     />
   </div>
 </ng-template>
