feat(user): clean button functional

--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-        <app-form-buttons />
+        <app-form-buttons (handleEdit)="formUserRegister= initUserForm()" />
       </form>
     </div>
   </div>
