--- a/src/app/components/stats/dashboard-users-list/dashboard-users-list.component.html
+++ b/src/app/components/stats/dashboard-users-list/dashboard-users-list.component.html
@@ -22,7 +22,7 @@
       <div class="w-3/12 pl-3">Plano de Saúde</div>
       <div class="w-1/12 px-3"></div>
     </div>
-    <app-stats-table-row
+    <app-patient-table-row
       *ngFor="let patient of getPatients()"
       [patient]="patient"
     />
