fix(stats): correct users list component on html

--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -35,7 +35,7 @@
             </button>
           </div>
         </div>
-        <app-stats-list
+        <app-dashboard-users-list
           [data]="menuOptions[0].selected ? patients : users"
           [listStyle]="listStyle"
         />
