feat(stats): set patient header on dashboard

--- a/src/app/components/stats/dashboard-users-list/dashboard-users-list.component.html
+++ b/src/app/components/stats/dashboard-users-list/dashboard-users-list.component.html
@@ -14,14 +14,7 @@
 </ng-template>
 <ng-template #table>
   <div class="flex flex-col overflow-hidden border rounded-md border-slate-300">
-    <div class="flex items-center font-medium text-slate-800">
-      <div class="w-10 py-2 aspect-square bg-slate-300"></div>
-      <div class="flex-grow pl-3">Nome</div>
-      <div class="w-1/12 pl-3">Idade</div>
-      <div class="w-2/12 pl-3">Contato</div>
-      <div class="w-3/12 pl-3">Plano de Saúde</div>
-      <div class="w-1/12 px-3"></div>
-    </div>
+    <app-patient-table-header />
     <app-patient-table-row
       *ngFor="let patient of getPatients()"
       [patient]="patient"
