--- a/src/app/components/stats/cards/user-card/user-card.component.html
+++ b/src/app/components/stats/cards/user-card/user-card.component.html
@@ -4,7 +4,10 @@
   <div class="flex flex-col">
     <ng-icon name="ionPersonCircle" class="mx-auto text-6xl" />
     <p class="text-lg font-medium truncate">{{ user?.fullName }}</p>
-    <p class="text-sm italic text-slate-400">{{ user?.phone }}</p>
+    <div class="flex flex-col justify-between text-sm italic text-slate-400">
+      <p>{{ user?.phone }}</p>
+      <p>{{ user?.type }}</p>
+    </div>
   </div>
 
   <button class="py-1 rounded bg-slate-600 text-slate-50" (click)="onClick()">
