feat(stats): add functionality to buttons

--- a/src/app/components/stats/cards/user-card/user-card.component.html
+++ b/src/app/components/stats/cards/user-card/user-card.component.html
@@ -10,7 +10,10 @@
     </div>
   </div>
 
-  <button class="py-1 rounded bg-slate-600 text-slate-50" (click)="onClick()">
+  <button
+    class="py-1 rounded bg-slate-600 text-slate-50"
+    [routerLink]="['usuarios', user?.id]"
+  >
     Ver detalhes
   </button>
 </div>
