--- a/src/app/components/stats/cards/patient-card/patient-card.component.html
+++ b/src/app/components/stats/cards/patient-card/patient-card.component.html
@@ -11,7 +11,10 @@
     <p class="font-medium text-slate-400">{{ patient?.healthInsurance }}</p>
   </div>
 
-  <button class="py-1 rounded bg-slate-600 text-slate-50" (click)="onClick()">
+  <button
+    class="py-1 rounded bg-slate-600 text-slate-50"
+    [routerLink]="['pacientes', patient?.id]"
+  >
     Ver detalhes
   </button>
 </div>
