--- a/src/app/components/stats/tables/user-table-row/user-table-row.component.html
+++ b/src/app/components/stats/tables/user-table-row/user-table-row.component.html
@@ -8,6 +8,6 @@
   <div class="w-2/12 pl-1">{{ user?.phone }}</div>
   <div class="w-3/12 pl-1">{{ user?.type }}</div>
   <div class="w-1/12 h-full px-3 py-2 bg-slate-600 text-slate-50">
-    <button>Detalhes</button>
+    <button [routerLink]="['usuarios', user?.id]">Detalhes</button>
   </div>
 </div>
