feat(medicaments): update form

--- a/src/app/pages/medicaments/medicaments.component.html
+++ b/src/app/pages/medicaments/medicaments.component.html
@@ -1,11 +1,11 @@
 <div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
-    <div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
-      <form [formGroup]="formMedicaments">
-        <h3 class="text-xl font-bold my-2">Cadastro de medicamentos</h3>
+    <div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
+      <form [formGroup]="formMedicaments" (ngSubmit)="registerMedicament()">
+        <h3 class="my-2 text-xl font-bold">Cadastro de medicamentos</h3>
 
-        <div class="md:flex gap-2">
-          <div class="input-wrapper w-10/12">
+        <div class="gap-2 md:flex">
+          <div class="w-8/12 input-wrapper">
             <label for="medicamentsName">Nome do medicamento</label>
             <input
               type="text"
@@ -15,52 +15,45 @@
               formControlName="medicamentsName"
             />
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('medicamentsName')?.errors?.['required'] && formMedicaments.get('medicamentsName')?.touched"
             >
               <p>Por favor insira o nome do medicamento!</p>
             </div>
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('medicamentsName')?.errors?.['minlength'] && formMedicaments.get('medicamentsName')?.touched"
             >
               <p>Seu nome deve possuir no mínimo 5 caracteres!</p>
             </div>
           </div>
-        </div>
-
-        <div class="md:flex gap-2">
-          <div class="input-wrapper w-6/12">
+          <div class="w-2/12 input-wrapper">
             <label for="date">Data</label>
             <input
-              type="text"
+              type="date"
               class="input-field"
               name="date"
               id="date"
               formControlName="date"
-              placeholder="dd/mm/aaaa"
-              mask="d0/M0/0000"
             />
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('date')?.errors?.['required'] && formMedicaments.get('date')?.touched"
             >
               <p>Por favor insira a data!</p>
             </div>
           </div>
-          <div class="input-wrapper w-6/12">
+          <div class="w-2/12 input-wrapper">
             <label for="time">Horário</label>
             <input
-              type="text"
+              type="time"
               class="input-field"
               name="time"
               id="time"
               formControlName="time"
-              placeholder="hh:mm:ss"
-              mask="Hh:m0:s0"
             />
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('time')?.errors?.['required'] && formMedicaments.get('time')?.touched"
             >
               <p>Por favor insira o horário!</p>
@@ -68,8 +61,8 @@
           </div>
         </div>
 
-        <div class="md:flex gap-2">
-          <div class="input-wrapper w-4/12">
+        <div class="gap-2 md:flex">
+          <div class="w-3/12 input-wrapper">
             <label for="type">Tipo</label>
             <select
               class="input-field"
@@ -78,23 +71,23 @@
               formControlName="type"
             >
               <option disabled selected></option>
-              <option value="capsule">Cápsula</option>
-              <option value="pill">Comprimido</option>
-              <option value="liquid">Líquido</option>
-              <option value="creme">Creme</option>
-              <option value="gel">Gel</option>
-              <option value="inalation">Inalação</option>
-              <option value="injection">Injeção</option>
-              <option value="spray">Spray</option>
+              <option value="CAPSULE">Cápsula</option>
+              <option value="PILL">Comprimido</option>
+              <option value="LIQUID">Líquido</option>
+              <option value="CREAM">Creme</option>
+              <option value="GEL">Gel</option>
+              <option value="INHALATION">Inalação</option>
+              <option value="INJECTION">Injeção</option>
+              <option value="SPRAY">Spray</option>
             </select>
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('type')?.errors?.['required'] && formMedicaments.get('type')?.touched"
             >
               <p>Por favor insira o tipo de medicamento!</p>
             </div>
           </div>
-          <div class="input-wrapper w-4/12">
+          <div class="w-3/12 input-wrapper">
             <label for="amount">Quantidade</label>
             <input
               type="text"
@@ -104,13 +97,13 @@
               formControlName="amount"
             />
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('amount')?.errors?.['required'] && formMedicaments.get('amount')?.touched"
             >
               <p>Por favor insira a quantidade do medicamento!</p>
             </div>
           </div>
-          <div class="input-wrapper w-4/12">
+          <div class="w-3/12 input-wrapper">
             <label for="unit">Unidade</label>
             <select
               class="input-field"
@@ -120,23 +113,39 @@
               formControlName="unit"
             >
               <option disabled selected></option>
-              <option value="mg">Miligrama</option>
-              <option value="mcg">Micrograma</option>
-              <option value="g">Grama</option>
-              <option value="ml">Mililitro</option>
-              <option value="percent">Porcento</option>
+              <option value="MG">Miligrama</option>
+              <option value="MCG">Micrograma</option>
+              <option value="G">Grama</option>
+              <option value="ML">Mililitro</option>
+              <option value="PERCENTAGE">Porcento</option>
             </select>
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('unit')?.errors?.['required'] && formMedicaments.get('unit')?.touched"
             >
               <p>Por favor insira a unidade!</p>
             </div>
           </div>
+          <div class="w-3/12 mr-5 input-wrapper">
+            <label for="status">Status</label>
+            <div class="flex input-field">
+              <div>
+                <input
+                  type="checkbox"
+                  class="mr-2"
+                  checked="true"
+                  formControlName="status"
+                />
+              </div>
+              <div class="mr-3">
+                <label for="checkbox">Ativo</label>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="md:flex gap-2">
-          <div class="input-wrapper mr-5 w-full">
+        <div class="gap-2 md:flex">
+          <div class="w-full mr-5 input-wrapper">
             <label for="observations">Observações</label>
             <textarea
               class="input-field"
@@ -146,13 +155,13 @@
               formControlName="observations"
             ></textarea>
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('observations')?.errors?.['required'] && formMedicaments.get('observations')?.touched"
             >
               <p>Por favor insira as observações!</p>
             </div>
             <div
-              class="text-red-500 font-semibold"
+              class="font-semibold text-red-500"
               *ngIf="formMedicaments.get('observations')?.errors?.['minlength'] && formMedicaments.get('observations')?.touched"
             >
               <p>As observações devem possuir no mínimo 10 caracteres!</p>
@@ -160,25 +169,10 @@
           </div>
         </div>
 
-        <div class="md:flex gap-2">
-          <div class="input-wrapper mr-5 w-4/12">
-            <label for="status">Status do sistema</label>
-            <input
-              type="text"
-              class="input-field"
-              name="status"
-              id="status"
-              formControlName="status"
-            />
-            <div
-              class="text-red-500 font-semibold"
-              *ngIf="formMedicaments.get('status')?.errors?.['required'] && formMedicaments.get('status')?.touched"
-            >
-              <p>Por favor insira o status!</p>
-            </div>
-          </div>
-        </div>
-        <app-form-buttons (handleEdit)="formMedicaments = initMedicamentsForm()" />
+        <div class="gap-2 md:flex"></div>
+        <app-form-buttons
+          (handleEdit)="formMedicaments = initMedicamentsForm()"
+        />
       </form>
     </div>
   </div>
