refactor(medicaments): set quantity field type to number

--- a/src/app/pages/medicaments/medicaments.component.html
+++ b/src/app/pages/medicaments/medicaments.component.html
@@ -90,7 +90,7 @@
           <div class="w-3/12 input-wrapper">
             <label for="amount">Quantidade</label>
             <input
-              type="text"
+              type="number"
               class="input-field"
               name="amount"
               id="amount"
