feat(medicaments): update form style + remove unused ngOnInit fn

--- a/src/app/pages/medicaments/medicaments.component.html
+++ b/src/app/pages/medicaments/medicaments.component.html
@@ -43,7 +43,7 @@
               <p>Por favor insira a data!</p>
             </div>
           </div>
-          <div class="w-2/12 input-wrapper">
+          <div class="w-2/12 mr-5 input-wrapper">
             <label for="time">Horário</label>
             <input
               type="time"
@@ -169,7 +169,6 @@
           </div>
         </div>
 
-        <div class="gap-2 md:flex"></div>
         <app-form-buttons
           (handleEdit)="formMedicaments = initMedicamentsForm()"
         />
