feat(sidebar): add logout

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -20,6 +20,7 @@
   <section>
     <button
       class="flex items-center justify-center w-full gap-2 py-2 mx-auto transition-colors text-slate-400 focus:bg-slate-700 focus:text-slate-50 hover:bg-slate-700 hover:text-slate-50 focus:outline-none"
+      (click)="logout()"
     >
       <ng-icon name="ionArrowBackCircleOutline" class="text-xl" />
       Sair
