--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -25,45 +25,7 @@
     </section>
     <section #medicalRecordSections class="flex flex-col gap-3 p-3">
       <app-queries-section [queries]="medicalRecord?.queries ?? []" />
-
-      <app-accordion
-        [headerTitle]="medicalRecord?.exams?.length + ' Exames'"
-        headerIcon="ionDocuments"
-        iconSize="lg"
-        [bordered]="true"
-      >
-        <app-accordion *ngFor="let exam of medicalRecord?.exams">
-          <div customHeader class="flex gap-2">
-            <button [routerLink]="['/exames', exam.id]">
-              <ng-icon name="ionCreateOutline" class="text-lg" />
-            </button>
-            <p customHeader class="font-semibold">
-              {{ exam.examDate }} {{ exam.examHour }}
-              <span class="font-medium"> - {{ exam.examName }}</span>
-            </p>
-          </div>
-          <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
-            <p>
-              Tipo de exame:
-              <span class="font-medium">{{ exam.examType }}</span>
-            </p>
-            <p>
-              Laboratório:
-              <span class="font-medium">{{ exam.laboratory }}</span>
-            </p>
-            <p>
-              Anexo:
-              <a [href]="exam.documentUrl" class="font-medium text-blue-500">{{
-                exam.documentUrl
-              }}</a>
-            </p>
-            <p>
-              Resultados:
-              <span class="font-medium">{{ exam.results }}</span>
-            </p>
-          </div>
-        </app-accordion>
-      </app-accordion>
+      <app-exams-section [exams]="medicalRecord?.exams ?? []" />
 
       <!-- <app-accordion
         [headerTitle]="getMedicamentsTotal() + ' Medicamentos'"
