--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -26,6 +26,7 @@
     <section #medicalRecordSections class="flex flex-col gap-3 p-3">
       <app-queries-section [queries]="medicalRecord?.queries ?? []" />
       <app-exams-section [exams]="medicalRecord?.exams ?? []" />
+      <app-exercises-section [exercises]="medicalRecord?.exercises ?? []" />
 
       <!-- <app-accordion
         [headerTitle]="getMedicamentsTotal() + ' Medicamentos'"
@@ -63,39 +64,6 @@
           </div>
         </app-accordion>
       </app-accordion> -->
-
-      <app-accordion
-        [headerTitle]="medicalRecord?.exercises?.length + ' Exercícios'"
-        headerIcon="ionDocuments"
-        iconSize="lg"
-        [bordered]="true"
-      >
-        <app-accordion *ngFor="let exercise of medicalRecord?.exercises">
-          <div customHeader class="flex gap-2">
-            <button [routerLink]="['/exercicios', exercise.id]">
-              <ng-icon name="ionCreateOutline" class="text-lg" />
-            </button>
-            <p customHeader class="font-semibold">
-              {{ exercise.date }} {{ exercise.time }}
-              <span class="font-medium"> - {{ exercise.name }}</span>
-            </p>
-          </div>
-          <div class="p-2 font-semibold rounded-md bg-slate-600 text-slate-50">
-            <p>
-              Tipo de exercício:
-              <span class="font-medium">{{ exercise.type }}</span>
-            </p>
-            <p>
-              Quantidade semanal:
-              <span class="font-medium">{{ exercise.weeklyAmount }}</span>
-            </p>
-            <p>
-              Descrição:
-              <span class="font-medium">{{ exercise.description }}</span>
-            </p>
-          </div>
-        </app-accordion>
-      </app-accordion>
 
       <app-accordion
         [headerTitle]="medicalRecord?.diets?.length + ' Dietas'"
