feat(query): update functionality

--- a/src/app/pages/query/query.component.html
+++ b/src/app/pages/query/query.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
     <div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
-      <form [formGroup]="formQuery" (ngSubmit)="registerQuery()">
+      <form [formGroup]="formQuery" (ngSubmit)="saveQuery()">
         <h3 class="my-2 text-xl font-bold">Cadastro de consultas</h3>
 
         <div class="gap-2 md:flex">
